maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:4: error: type mismatch;
 found   : Unit
 required: (Int, Int)
  for (i<-0 to getMondeLargeur;j<-0 to getMondeHauteur){
        ^