maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  var sortie:(Int,Int) = 
  for (i<-0 to getMondeLargeur;j<-0 to getMondeHauteur){
      
    }
}